--- a/CatFactsCollector/appsettings.json
+++ b/CatFactsCollector/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FilePath": "catFact.txt",
+  "BaseURL": "https://catfact.ninja"
 }
